@@ -34,7 +34,7 @@
 const QLatin1String SoundCloudService::constName("SoundCloud");
 static const QString constApiKey=QLatin1String("0cb23dce473528973ce74815bd36a334");
 static const QString constHost=QLatin1String("api.soundcloud.com");
-static const QString constUrl=QLatin1String("https://")+constHost+QLatin1Char('/');
+static const QString constUrl=QLatin1String("http://")+constHost+QLatin1Char('/');
 
 SoundCloudService::SoundCloudService(MusicModel *m)
     : OnlineService(m, constName)
