@@ -8,6 +8,7 @@
    will be saved here.
 4. Fix reading of genres from cache file.
 5. Fix updating of genres after DB is refreshed.
+6. Dont use https for context view searches.
 
 1.1.0
 -----
